2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Load fonts and modules for gfxmenu in grub-mkconfig.
	Idea by: Mario Vasquez

	* util/grub.d/00_header.in: Load pf2 and image modules.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	grub-mkconfig multiple terminal support.

	* util/grub-mkconfig.in: Handle multiple terminals correctly.
	* util/grub.d/00_header.in: Likewise.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in: Specify files explicitly instead of using $< and $@ since
	we use cd $(srcdir).

2010-04-08  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/10_linux.in: Only use the first word of
	GRUB_DISTRIBUTOR for --class, to avoid problems if somebody puts
	spaces in GRUB_DISTRIBUTOR.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_hurd.in: Likewise.

2010-04-06  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix unit testing framework for Qemu 0.12.

	* tests/util/grub-shell.in: Remove -serial stdio option.

2010-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	POSIX header file wrappers.

	* lib/posix_wrap/assert.h: New file. Wrapper for its POSIX
	equivalents.
	* lib/posix_wrap/ctype.h: Likewise.
	* lib/posix_wrap/errno.h: Likewise.
	* lib/posix_wrap/langinfo.h: Likewise.
	* lib/posix_wrap/limits.h: Likewise.
	* lib/posix_wrap/localcharset.h: Likewise.
	* lib/posix_wrap/stdint.h: Likewise.
	* lib/posix_wrap/stdio.h: Likewise.
	* lib/posix_wrap/stdlib.h: Likewise.
	* lib/posix_wrap/string.h: Likewise.
	* lib/posix_wrap/sys/types.h: Likewise.
	* lib/posix_wrap/unistd.h: Likewise.
	* lib/posix_wrap/wchar.h: Likewise.
	* lib/posix_wrap/wctype.h: Likewise.
	* conf/common.rmk (grub_script.yy.c): Remove #include elimination.
	(grub_script.yy.h): Likewise.
	* script/yylex.l: Remove POSIX emulation #defines.
	* Makefile.in (POSIX_CFLAGS): New variable.
	(GNULIB_UTIL_CFLAGS): Likewise.

	Regexp support.

	* conf/common.rmk (pkglib_MODULES): Add regexp.mod.
	(regexp_mod_SOURCES): New variable.